School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/syntax/invalid/OwnTests_stepA/invalid/lexer/wrong_AND.deca
//test de AND en mettant que & au lieu de &&
//erreur attendue : token recognition error at: '& '

{
    boolean b = true & false;
}